tests/should_fail/bad_range_x.sm
initial foo
final bar

# fail because 5 < 10
region (10 20 5 50)

foo -- keys [ a ] --> bar

foo --
  winc "foo"
--> pre
